Updated CTA link for read more

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         Uddannelsen henvender sig til teamledere, men også til alle andre – ledige eller i job, der
                         ønsker at lære mere om, hvordan man fungerer i et team.
                     </p>
-                    <a href="https://apps.amujuul.dk/kursuskalender/ledelse/teaml" class="inline-block mx-auto px-8 py-2.5 text-lg bg-stiletto-500 text-white hover:bg-stiletto-400 active:bg-stiletto-600 focus:outline-none focus:ring focus:ring-stiletto-500/50 transition-colors duration-100">
+                    <a href="https://www.amujuul.dk/ledelse/teamlederuddannelse" class="inline-block mx-auto px-8 py-2.5 text-lg bg-stiletto-500 text-white hover:bg-stiletto-400 active:bg-stiletto-600 focus:outline-none focus:ring focus:ring-stiletto-500/50 transition-colors duration-100">
                         Læs mere om kurset
                     </a>
                 </div>
