--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="mt-1 text-4xl leading-8 sm:leading-none font-extrabold sm:text-5xl tracking-tight lg:text-6xl [text-shadow:_0_1px_15px_var(--tw-shadow-color)] shadow-slate-900/50">
                 Teamlederuddannelsen
             </h1>
-            <a href="https://apps.amujuul.dk/kursuskalender/ledelse/teaml" class="inline-block mx-auto px-8 py-2.5 text-lg bg-stiletto-500 hover:bg-stiletto-400 active:bg-stiletto-600 focus:outline-none focus:ring focus:ring-stiletto-500/50 transition-colors duration-100">
+            <a href="https://www.amujuul.dk/kursuskalender/ledelse?kursus=teaml" class="inline-block mx-auto px-8 py-2.5 text-lg bg-stiletto-500 hover:bg-stiletto-400 active:bg-stiletto-600 focus:outline-none focus:ring focus:ring-stiletto-500/50 transition-colors duration-100">
                 Find dit kursus
             </a>
         </div>
