Fathom: Removed custom domain

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <script src="https://cdn.teamlederuddannelsen.dk/script.js" data-site="SYNANAMN" defer></script>
+    <script src="https://cdn.usefathom.com/script.js" data-site="SYNANAMN" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="app.min.css" rel="stylesheet">
