--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="absolute inset-0 overflow-hidden">
         <div class="relative z-10 mx-auto max-w-7xl flex-shrink-0 flex items-center">
             <a href="https://www.teamlederuddannelsen.dk" class="block">
-                <img src="logo.svg" class="absolute w-[237px] top-7 sm:top-0 left-2.5 sm:w-[272px]" alt="AMU JUUL" width="272px" height="65px">
+                <img src="https://www.amujuul.dk/assets/gfx/logo.svg" class="absolute w-[237px] top-7 sm:top-0 left-2.5 sm:w-[272px]" alt="AMU JUUL" width="272px" height="65px">
             </a>
         </div>
         <video autoplay="autoplay" class="absolute top-1/2 left-1/2 min-w-full min-h-full max-w-[2560px] z-0 translate-x-[-45%] translate-y-[-50%] md:translate-x-[-50%] block" loop="loop" muted="muted" playsinline="" src="teamlederuddannnelse.mp4" x-webkit-airplay="deny"></video>
@@ -136,7 +136,7 @@
         <div class="md:grid md:grid-cols-3 md:gap-12 lg:grid-cols-3 lg:gap-12">
             <div class="space-y-5 md:col-span-1 lg:border-r-2 lg:border-outer-space-800 pb-12">
                 <a href="https://www.teamlederuddannelsen.dk">
-                    <img width="228px" height="25px" alt="AMU JUUL" class="mb-5" loading="lazy" src="logo-footer.svg">
+                    <img width="228px" height="25px" alt="AMU JUUL" class="mb-5" loading="lazy" src="https://www.amujuul.dk/assets/gfx/logo-footer.svg">
                 </a>
                 <p class="ml-[-3px]">
                     <a href="tel:+4539391111" rel="noopener noreferrer" title="<?= __('customer_service') ?> 39 39 11 11" class="group inline-block py-2">
