Updated to logo without tagline and sizes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="absolute inset-0 overflow-hidden">
         <div class="relative z-10 mx-auto max-w-7xl flex-shrink-0 flex items-center">
             <a href="https://www.teamlederuddannelsen.dk" class="block">
-                <img src="https://www.amujuul.dk/assets/gfx/logo.svg" class="absolute w-[237px] top-7 sm:top-0 left-2.5 sm:w-[272px]" alt="AMU JUUL" width="272px" height="65px">
+                <img src="https://www.amujuul.dk/assets/gfx/logo-clean.svg" class="absolute w-[230px] top-7 sm:top-0 left-2.5 sm:w-[258px]" alt="AMU JUUL" width="230px" height="65px">
             </a>
         </div>
         <video autoplay="autoplay" class="absolute top-1/2 left-1/2 min-w-full min-h-full max-w-[2560px] z-0 translate-x-[-45%] translate-y-[-50%] md:translate-x-[-50%] block" loop="loop" muted="muted" playsinline="" src="teamlederuddannnelse.mp4" x-webkit-airplay="deny"></video>
