--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="absolute inset-0 overflow-hidden">
         <div class="relative z-10 mx-auto max-w-7xl flex-shrink-0 flex items-center">
             <a href="https://www.teamlederuddannelsen.dk" class="block">
-                <img src="https://www.amujuul.dk/assets/gfx/logo-clean.svg" class="absolute w-[230px] top-7 sm:top-0 left-2.5 sm:w-[258px]" alt="AMU JUUL" width="230px" height="65px">
+                <img src="https://www.amujuul.dk/assets/gfx/logo-clean.svg" class="absolute w-[230px] top-7 sm:top-0 left-2.5 sm:w-[258px]" alt="JUUL" width="230px" height="65px">
             </a>
         </div>
         <video autoplay="autoplay" class="absolute top-1/2 left-1/2 min-w-full min-h-full max-w-[2560px] z-0 translate-x-[-45%] translate-y-[-50%] md:translate-x-[-50%] block" loop="loop" muted="muted" playsinline="" src="teamlederuddannnelse.mp4" x-webkit-airplay="deny"></video>
@@ -137,7 +137,7 @@
         <div class="md:grid md:grid-cols-3 md:gap-12 lg:grid-cols-3 lg:gap-12">
             <div class="space-y-5 md:col-span-1 lg:border-r-2 lg:border-outer-space-800 pb-12">
                 <a href="https://www.teamlederuddannelsen.dk">
-                    <img width="228px" height="25px" alt="AMU JUUL" class="mb-5" loading="lazy" src="https://www.amujuul.dk/assets/gfx/logo-footer.svg">
+                    <img width="230px" height="65px" alt="JUUL" class="mb-5" loading="lazy" src="https://www.amujuul.dk/assets/gfx/logo-clean.svg">
                 </a>
                 <p class="ml-[-3px]">
                     <a href="tel:+4539391111" rel="noopener noreferrer" title="<?= __('customer_service') ?> 39 39 11 11" class="group inline-block py-2">
@@ -217,7 +217,7 @@
             </div>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 border-t-2 border-outer-space-800 text-xs text-white text-opacity-50 mt-12 py-4">
-            <div class="order-last mt-3 md:order-none md:mt-0">&copy; 2023 AMU JUUL &mdash; Alle rettigheder forbeholdes</div>
+            <div class="order-last mt-3 md:order-none md:mt-0">&copy; 2024 JUUL &mdash; Alle rettigheder forbeholdes</div>
         </div>
     </div>
 </footer>
